test/errors/parser/syntax_unterminated_math_expr.ms
a = 1-
// Compiler Error: got EOL where number, string, or identifier is required
